concord_macros/tests/trybuild/fail/codegen/reserved_websocket_arity_zero.rs
use concord_macros::api;

api! {
    client ReservedWebSocketArityZeroApi {
        base "https://example.com"
    }

    GET Connect
        path ["connect"]
        -> WebSocket<>
}

fn main() {}
