concord_macros/tests/trybuild/fail/codegen/reserved_websocket_arity_zero.stderr
error: reserved endpoint I/O family `WebSocket` expects two or three type arguments
  --> tests/trybuild/fail/codegen/reserved_websocket_arity_zero.rs:10:12
   |
10 |         -> WebSocket<>
   |            ^^^^^^^^^^^
